# Biomedical-literature-assistant

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  ROADMAP.md  RUNBOOK.md  pyproject.toml  requirements.txt  retrieval_eval.json  run_demo.sh
.github/workflows/: ci.yml
data/: eval_questions.json
scripts/: ask.py  backfill_articles_manifest.py  backfill_triples.py  corpus_stats.py  eval_retrieval.py  eval_smoke.py  graph_export.py  ingest.py  serve.py  suggest_eval_pmids.py  topics_fit.py
src/biomed_rag/: __init__.py  bm25_index.py  chunking.py  config.py  corpus_articles.py  embeddings.py  extraction.py  hybrid.py  knowledge_graph.py  outcomes.py  prompts.py  pubmed_fetch.py  rerank.py  retrieval_eval.py  topic_context.py  vector_index.py  workflow.py
tests/: test_retrieval_eval.py  test_smoke.py
web/: index.html
web/static/: app.js  style.css
