[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "biomed-rag"
version = "0.1.0"
description = "PubMed RAG + knowledge graph + LangGraph (local-first)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
