[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "biomed-rag"
version = "0.1.0"
description = "Biomedical literature assistant: PubMed ingest, hybrid retrieval, optional knowledge graph, local LLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
